--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/reminderListFragment"
-        android:name="com.example.remindetti.locationreminders.reminderslist.RemindersFragment"
+        android:name="com.udacity.project4.locationreminders.reminderslist.RemindersFragment"
         android:label="ReminderListFragment">
         <action
             android:id="@+id/to_save_reminder"
@@ -14,11 +14,11 @@
     </fragment>
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.example.remindetti.locationreminders.RemindersActivity"
+        android:name="com.udacity.project4.locationreminders.RemindersActivity"
         android:label="MainActivity" />
     <fragment
         android:id="@+id/saveReminderFragment"
-        android:name="com.example.remindetti.locationreminders.savereminder.SaveReminderFragment"
+        android:name="com.udacity.project4.locationreminders.savereminder.SaveReminderFragment"
         android:label="Add Reminder">
         <action
             android:id="@+id/action_saveReminderFragment_to_reminderListFragment"
@@ -29,7 +29,7 @@
     </fragment>
     <fragment
         android:id="@+id/selectLocationFragment"
-        android:name="com.example.remindetti.locationreminders.savereminder.selectreminderlocation.SelectLocationFragment"
+        android:name="com.udacity.project4.locationreminders.savereminder.selectreminderlocation.SelectLocationFragment"
         android:label="Select Location" />
 
 </navigation>
